# codey

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml
cli/: package-lock.json  package.json
cli/src/: index.ts
codey/: __init__.py  cli.py
codey/autonomous/: __init__.py  audit_db.py  monitor.py
codey/dashboard/: __init__.py  server.py
codey/graph/: __init__.py  engine.py
codey/llm/: __init__.py  code_agent.py  prompt_builder.py
codey/nfet/: __init__.py  config.py  health_db.py  sweep.py
codey/parser/: __init__.py  extractor.py
codey/saas/: config.py  database.py
docs/: admin.html  analyze.html  build.html  changelog.html  dashboard.html  docs.html  examples.html  forgot-password.html  help.html  index.html  login.html  onboarding.html  pricing.html  privacy.html  referrals.html  settings.html  signup.html  terms.html
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  auth.ts  auth.tsx  stripe.ts  websocket.ts
saas/: config.py
saas/api/: referral_routes.py  repo_routes.py  session_routes.py  user_routes.py
saas/auth/: __init__.py  dependencies.py
saas/billing/: plans.py
saas/credits/: __init__.py  service.py
saas/emails/: __init__.py
saas/memory/: engine.py
saas/models/: __init__.py  api_key.py  base.py  coding_session.py  cost_tracking.py  (+10 more)
tests/: test_health.py
vscode-extension/: package.json
(+120 files in other folders)
