[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codey"
version = "0.1.0"
description = "Network-Aware Autonomous Coding Intelligence — Powered by NFET"
authors = [
    {name = "Bryan Leonard", email = "bryan@qira.ai"},
    {name = "Brandyn Leonard", email = "brandyn@qira.ai"},
]
requires-python = ">=3.9"
dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "websockets>=12.0",
    "watchdog>=4.0",
    "anthropic>=0.40",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
codey = "codey.cli:main"

[tool.setuptools.packages.find]
where = ["."]
